[CD] : OAuth working for both Github & Google :lock_with_ink_pen:

--- a/emsi-sdia-app/customer-front-thymeleaf-app/src/main/resources/application.properties
+++ b/emsi-sdia-app/customer-front-thymeleaf-app/src/main/resources/application.properties
@@ -2,3 +2,11 @@ spring.application.name=customer-app
 server.port=8090
 spring.datasource.url=jdbc:h2:mem:customers-db
 spring.h2.console.enabled=true
+
+spring.security.oauth2.client.registration.google.clientId=253290728494-c76mpn22ghqp094g9qs1lpk4fs31emqj.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.provider.google.user-name-attribute=email
+
+spring.security.oauth2.client.registration.github.clientId=5bcf65f55a607c62daff
+spring.security.oauth2.client.registration.github.client-secret=e48c34401b934b1896b703163d3c90da7d41916b
+spring.security.oauth2.client.provider.github.user-name-attribute=login
