--- a/emsi-sdia-app/customer-front-thymeleaf-app/src/main/resources/application.properties
+++ b/emsi-sdia-app/customer-front-thymeleaf-app/src/main/resources/application.properties
@@ -10,3 +10,19 @@ spring.security.oauth2.client.provider.google.user-name-attribute=email
 spring.security.oauth2.client.registration.github.clientId=5bcf65f55a607c62daff
 spring.security.oauth2.client.registration.github.client-secret=e48c34401b934b1896b703163d3c90da7d41916b
 spring.security.oauth2.client.provider.github.user-name-attribute=login
+
+
+spring.security.oauth2.client.registration.keycloak.client-name=Keycloak
+spring.security.oauth2.client.registration.keycloak.client-id=sdia-customer-client
+spring.security.oauth2.client.registration.keycloak.client-secret=r4QdwqxmTsHDwdWyazl8yCoOkcKdzf0R
+spring.security.oauth2.client.registration.keycloak.scope=openid,profile,email,offline_access
+spring.security.oauth2.client.registration.keycloak.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.keycloak.redirect-uri=${KEYCLOAK_REDIRECT_URI:http://localhost:8090/login/oauth2/code/sdia-customer-client}
+spring.security.oauth2.client.provider.keycloak.issuer-uri=${KEYCLOAK_ISSUER_URI:http://localhost:8080/realms/sdia-realm}
+
+spring.security.oauth2.client.provider.keycloak.user-name-attribute=preferred_username
+
+spring.security.oauth2.client.provider.keycloak.authorization-uri=${KEYCLOAK_AUTH:http://localhost:8080/realms/sdia-realm/protocol/openid-connect/auth}
+spring.security.oauth2.client.provider.keycloak.token-uri=${KEYCLOAK_AUTH_TOKEN:http://localhost:8080/realms/sdia-realm/protocol/openid-connect/token}
+spring.security.oauth2.client.provider.keycloak.jwk-set-uri=${JWT_JWK_SET_URI:http://localhost:8080/realms/sdia-realm/protocol/openid-connect/certs}
+inventory.service.base.uri=${INVENTORY_SERVICE_BASE_URI:http://localhost:8098}
